# info_pyramid

./: ADAPTER_EXPANSION_SUMMARY.md  ADAPTER_FINAL_FIXES_SUMMARY.md  ADAPTER_ISSUES_FIX_SUMMARY.md  ADAPTER_OHLCVA_FIX_SUMMARY.md  CALENDAR_INTEGRATION_SUMMARY.md  CALENDAR_LIBRARIES_COMPARISON.md  COMPLETE_ADAPTER_V2_SUPPORT.md  COMPREHENSIVE_ADAPTER_FIX_SUMMARY.md  CORE_SCHEMA_USAGE.md  EASYQUOTATION_REPLACEMENT_SUMMARY.md  EFINANCE_FIX_SUMMARY.md  MOOTDX_API_FIX_SUMMARY.md  QSTOCK_FUNDAMENTALS_MACRO_ENHANCEMENT.md  README.md  SNOWBALL_ENHANCEMENT_SUMMARY.md  debug_efinance.py  pyproject.toml  test_efinance_simple.py
docs/: CONFIGURATION.md  V2_ARCHITECTURE.md
src/ak_unified/: api.py  dispatcher.py  dispatcher_v2.py  rate_limiter.py  registry.py  registry_v2.py  resolver.py
src/ak_unified/adapters/: adata_adapter.py  akshare_adapter.py  baostock_adapter.py  calendar_adapter.py  earnings_calendar_adapter.py  easyquotation_adapter.py  efinance_adapter.py  exchange_calendars_adapter.py  financial_data_adapter.py  ibkr_adapter.py  mootdx_adapter.py  pandas_market_calendars_adapter.py  qmt_adapter.py  qstock_adapter.py  snowball_adapter.py
src/ak_unified/schemas/: validators.py
tests/: test_adapter_api_coverage.py  test_akshare_adapter_apis.py  test_api_coverage_policy.py  test_v2_routing.py
