[project]
name = "ak-unified"
version = "0.1.0"
description = "Unified data acquisition framework for financial markets"
authors = [
    {name = "AK Unified Team", email = "team@ak-unified.com"}
]
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "asyncpg>=0.29.0",
    "PyYAML>=6.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.1",
    "aiolimiter>=1.1.0",
    "pytest-asyncio>=0.23.0",
    "sse-starlette>=1.8.2",
    "akshare>=1.12.0",
    "yfinance>=0.2.0",
    "efinance>=0.0.0",
    "baostock>=0.8.0",
    "qstock>=0.0.0",
    "adata>=0.0.0",
    "pysnowball>=0.0.0",
    "easytrader>=0.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0,<7.2.0",
    "mypy>=1.5.0"
]
ibkr = [
    "ib-async>=0.1.0"
]
windows-mootdx = [
    "mootdx<=0.11.7"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--asyncio-mode=auto",
    "--cov=src/ak_unified",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80"
]
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
source = ["src/ak_unified"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.coverage.html]
directory = "htmlcov"
title = "AK Unified Test Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"